Fixed links for publishing. No other changes.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <header class="header">
         <h1 class="logo">
-            <a href="index.html"><img src="/assets/icons/oz_music_logo.png" alt=""></a>
+            <a href="index.html"><img src="/assets/images/oz_music_logo.png" alt=""></a>
         </h1>
         <nav class="nav">
             <ul>
@@ -41,7 +41,7 @@
             </h1>
         </div>
         <div class="view-album-btn-container">
-            <a href="indv-prod-pg.html" class="btn-hero btn-hero-accent">View Album</a>
+            <a href="/main/indv-prod-pg.html" class="btn-hero btn-hero-accent">View Album</a>
         </div>
     </section>
 
@@ -64,7 +64,7 @@
             <figcaption class="album-desc">
                 <h1>Tassels</h1>
                 <p> by Mt Mountain</p>
-                <a href="indv-prod-pg.html" class="button button-accent button-small">View Album</a>
+                <a href="/main/indv-prod-pg.html" class="button button-accent button-small">View Album</a>
             </figcaption>
         </figure>
 
@@ -74,7 +74,7 @@
             <figcaption class="album-desc">
                 <h1>The Girl the Cat and The Tree</h1>
                 <p> by Lausse the Cat</p>
-                <a href="indv-prod-pg.html" class="button button-accent button-small">View Album</a>
+                <a href="/main/indv-prod-pg.html" class="button button-accent button-small">View Album</a>
             </figcaption>
         </figure>
 
@@ -84,7 +84,7 @@
             <figcaption class="album-desc">
                 <h1>ADAPT TO SELF-INFLICTED CHEMICAL TORTURE</h1>
                 <p> by SELF HARM</p>
-                <a href="indv-prod-pg.html" class="button button-accent button-small">View Album</a>
+                <a href="/main/indv-prod-pg.html" class="button button-accent button-small">View Album</a>
             </figcaption>
         </figure>
 
@@ -94,7 +94,7 @@
             <figcaption class="album-desc">
                 <h1>Born Like This</h1>
                 <p> by DOOM</p>
-                <a href="indv-prod-pg.html" class="button button-accent button-small">View Album</a>
+                <a href="/main/indv-prod-pg.html" class="button button-accent button-small">View Album</a>
             </figcaption>
         </figure>
 
@@ -104,7 +104,7 @@
             <figcaption class="album-desc">
                 <h1>Snoopy</h1>
                 <p>by CS & Kreme</p>
-                <a href="indv-prod-pg.html" class="button button-accent button-small">View Album</a>
+                <a href="/main/indv-prod-pg.html" class="button button-accent button-small">View Album</a>
             </figcaption>
         </figure>
 
@@ -114,7 +114,7 @@
             <figcaption class="album-desc">
                 <h1>James is Going to Die soon </h1>
                 <p>by Crywank</p>
-                <a href="indv-prod-pg.html" class="button button-accent button-small">View Album</a>
+                <a href="/main/indv-prod-pg.html" class="button button-accent button-small">View Album</a>
             </figcaption>
         </figure>
     </section>
