--- a/main/indv-prod-pg.html
+++ b/main/indv-prod-pg.html
@@ -16,7 +16,7 @@
 
 <header class="header">
     <h1 class="logo">
-        <a href="/index.html"><img src="/assets/icons/oz_music_logo.png" alt=""></a>
+        <a href="/index.html"><img src="/assets/images/oz_music_logo.png" alt=""></a>
     </h1>
     <input type="checkbox" id="nav-toggle" class="nav-toggle">
 
@@ -24,7 +24,7 @@
         <ul>
             <li><a href="/index.html">Home</a></li>
             <li><a href="">About</a></li>
-            <li><a href="/main/search-page.html">Shop</a></li>
+            <li><a href="/search-page.html">Shop</a></li>
             <li><a href="">Contact</a></li>
             <li><a href="">
                     <ion-icon name="cart-outline"></ion-icon>
